src/objects/Needs_Assesment__c.object
<CustomObject>
    <fields>
        <fullName>LEMP_Pay_Recurring_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Pay_Recurring_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEMP_Pay_Recurring_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEMP_Payment_Transfer_Comments__c</fullName>
        <label>LEMP_Payment_Transfer_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Transfer_Comments__c</fullName>
        <label>LEMP_Transfer_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEMP_Transfer_Frequency__c</fullName>
        <label>LEMP_Transfer_Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Frequently, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEMQ_Last_Updated_On__c</fullName>
        <label>LEMQ_Last_Updated_On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEMQ_Partially_Completed__c</fullName>
        <formula>If(LEMQ_Last_Updated_On__c &gt;= Datetimevalue(&apos;1/1/2000 00:00&apos;), if( Member__r.NA_LEMQ_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEMQ_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEOL_Last_Updated_On__c</fullName>
        <label>LE Other Loans Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOL_Other_Existing_Loans__c</fullName>
        <label>LEOL_Other_Existing_Loans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEOL_Partially_Completed__c</fullName>
        <formula>If(LEOL_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEOL_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEOL_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEOM_1_Status__c</fullName>
        <description>Life Events Other Milestones - Recommendation offer status</description>
        <inlineHelpText>Life Events Other Milestones - Recommendation offer status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEOM_2_Status__c</fullName>
        <description>Life Events Other Milestones - Recommendation offer status</description>
        <inlineHelpText>Life Events Other Milestones - Recommendation offer status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEOM_3_Status__c</fullName>
        <description>Life Events Other Milestones - Recommendation offer status</description>
        <inlineHelpText>Life Events Other Milestones - Recommendation offer status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEOM_College_Update__c</fullName>
        <label>LEOM College Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Comments__c</fullName>
        <label>LEOM_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEOM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section Complete - Life Events - Other Milestones</description>
        <inlineHelpText>Section Complete - Life Events - Other Milestones</inlineHelpText>
        <label>Complete LEOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEOM_Home_Update__c</fullName>
        <label>LEOM Home Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Last_Updated_On__c</fullName>
        <label>LEOM_Last_Updated_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Life_Events_Update__c</fullName>
        <label>LEOM Life Events Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Medical_Update__c</fullName>
        <label>LEOM Medical Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Other_Expenses_Update__c</fullName>
        <label>LEOM Other Expenses Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Partially_Completed__c</fullName>
        <formula>If(LEOM_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEOM_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEOM_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEOM_PlanUnforeseen__c</fullName>
        <label>LEOM_PlanUnforeseen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEOM_RV_Boat_Update__c</fullName>
        <label>LEOM RV/Boat Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Retirement_Update__c</fullName>
        <label>LEOM Retirement Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEOM_Travel_Update__c</fullName>
        <label>LEOM Travel Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEPT_Comments__c</fullName>
        <label>LEPT_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEPT_Convenient_locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Convenient locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Deposit_rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Deposit rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Financial_Institution__c</fullName>
        <label>LEPT_Financial_Institution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron Federal Credit Union</fullName>
                </value>
                <value>
                    <fullName>Spectrum Credit Union</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Capital One</fullName>
                </value>
                <value>
                    <fullName>Ally</fullName>
                </value>
                <value>
                    <fullName>USAA</fullName>
                </value>
                <value>
                    <fullName>Other Credit Union</fullName>
                </value>
                <value>
                    <fullName>Other Financial Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEPT_Have_financial_advisor_there__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Have financial advisor there</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Last_Response_Date_For_FI__c</fullName>
        <label>LEPT_Last Response Date for FI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEPT_Last_Response_Date_for_Comments__c</fullName>
        <label>LEPT_Last Response Date for Comments</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEPT_Last_Updated_On__c</fullName>
        <label>MM Primary Account Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEPT_Loan_rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Loan rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Online_mobile_apps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Online/mobile apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEPT_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEPT_Partially_Completed__c</fullName>
        <formula>If(LEPT_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEPT_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEPT_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LESB_Aware_ConvBranching__c</fullName>
        <label>Aware Convinient Branching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LESB_Aware_SharedBranching__c</fullName>
        <label>Aware of Shared Branching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LESB_Last_Updated_On__c</fullName>
        <label>Shared Branching Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LESB_Partially_Completed__c</fullName>
        <formula>If(LESB_Last_Updated_On__c &gt;= Datetimevalue(&apos;1/1/2000 00:00&apos;), if( Member__r.NA_LESB_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LESB_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LESB_SharedBranching_Comments__c</fullName>
        <label>Shared Branching Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LESF_ATM_Location_YesNo__c</fullName>
        <label>LESF_ATM_Location_YesNo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LESF_ATM_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LESF_ATM_Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LESF_Aware_ATM_Netword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LESF_Aware_ATM_Netword</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LESF_Aware_ATM_Network_YesNo__c</fullName>
        <label>LESF_Aware_ATM_Network_YesNo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LESF_Comments__c</fullName>
        <label>LESF_Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LESF_Last_Updated_On__c</fullName>
        <label>LESF_Last_Updated_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LESF_Partially_Completed__c</fullName>
        <formula>If(LEMQ_Last_Updated_On__c &gt;= Datetimevalue(&apos;1/1/2000 00:00&apos;), if( Member__r.NA_LEMQ_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LESF_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEWS_CFCU_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEWS_CFCU_ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEWS_Comment__c</fullName>
        <label>LEWS_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEWS_InPerson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEWS_InPerson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEWS_Last_Updated_On__c</fullName>
        <label>MM Withdrawals Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEWS_Other_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEWS_Other_ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEWS_Partially_Completed__c</fullName>
        <formula>If(LEWS_Last_Updated_On__c &gt;= Date(2000,1,1), if( Member__r.NA_LEWS_Complete__c = false, true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEWS_Partially_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEWS_Shared_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEWS_Shared_ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_LEHS__c</fullName>
        <description>The date that a needs assessment life events housing section was created for the member.</description>
        <label>Last LEHS</label>
        <summarizedField>NA_Housing__c.CreatedDate</summarizedField>
        <summaryForeignKey>NA_Housing__c.NA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_LEOM__c</fullName>
        <description>The date that a needs assessment life events other milestone section was created for the member.</description>
        <inlineHelpText>The date that a needs assessment life events other milestone section was created for the member.</inlineHelpText>
        <label>Last LEOM</label>
        <summarizedField>NA_LEOM__c.CreatedDate</summarizedField>
        <summaryForeignKey>NA_LEOM__c.NA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Life_Events_Plan__c</fullName>
        <label>Life Events Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Events_Timeframe__c</fullName>
        <label>Life Events Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Events__c</fullName>
        <label>Life Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Plan__c</fullName>
        <label>Medical Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Timeframe__c</fullName>
        <label>Medical Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Needs_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modification_Period__c</fullName>
        <formula>CreatedDate + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modification Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Plan__c</fullName>
        <label>Other Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Timeframe__c</fullName>
        <label>Other Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat_Plan__c</fullName>
        <label>Purchase RV/Boat Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat_Timeframe__c</fullName>
        <label>Purchase RV/Boat Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat__c</fullName>
        <label>Purchase RV/Boat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEAV_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEAV_Outcome_1__c</fullName>
        <label>Auto Loan Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LECF_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Center Extended Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LECF_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign_up_for_Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LECF_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign_up_for_Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LECF_Outcome_1__c</fullName>
        <label>Call Center Extended Hours Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LECF_Outcome_2__c</fullName>
        <label>Sign_up_for_Mobile Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LECF_Outcome_3__c</fullName>
        <label>Sign_up_for_Online Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEEM_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REC_LEEM_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEEM_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REC_LEEM_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMD_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMD_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMD_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Branching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMD_Outcome_1__c</fullName>
        <label>Direct Deposits Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMD_Outcome_2__c</fullName>
        <label>Mobile Deposits Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMD_Outcome_3__c</fullName>
        <label>Shared Branching Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMP_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signup for BillPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMP_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit Card Recurring Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMP_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P2P Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEMP_Outcome_1__c</fullName>
        <label>Signup for BillPay Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMP_Outcome_2__c</fullName>
        <label>Debit Card Recurring Pay Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMP_Outcome_3__c</fullName>
        <label>P2P Transfers Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEMQ_Outcome_1__c</fullName>
        <label>REC_LEMQ_Outcome_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REC_LEPT_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_LEPT_Outcome_1__c</fullName>
        <label>Checing Account Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_Comment__c</fullName>
        <label>Recommend_Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rec_LEEM_Outcome_1__c</fullName>
        <label>Rec_LEEM_Outcome_1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEEM_Outcome_2__c</fullName>
        <label>Rec_LEEM_Outcome_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEHS_1_Outcome__c</fullName>
        <label>Mortgage Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEHS_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation 1 - Life Events - Housing</description>
        <inlineHelpText>Recommendation 1 - Life Events - Housing</inlineHelpText>
        <label>Mortgages (Purchase or Refinance)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEHS_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity to recommend a realtor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEHS_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec_LEHS_3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEHS_Outcome_2__c</fullName>
        <label>Recommend a Realtor Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEHS_Outcome_3__c</fullName>
        <label>Rec_LEHS_Outcome_3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEMQ_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec_LEMQ_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOL_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refinance for Existing Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOL_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec_LEOL_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOL_Outcome_1__c</fullName>
        <label>Refinance for Existing Loans Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEOL_Outcome_2__c</fullName>
        <label>Rec_LEOL_Outcome_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Recommendation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEOM_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation 1 - Life Events - Other Milestones</description>
        <inlineHelpText>Recommendation 1 - Life Events - Other Milestones</inlineHelpText>
        <label>HELOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOM_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RV Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOM_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Savings Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_LEOM_Outcome_1__c</fullName>
        <label>HELOC_Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEOM_Outcome_2__c</fullName>
        <label>RV Loan Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_LEOM_Outcome_3__c</fullName>
        <label>Health Savings Account Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_New__c</fullName>
        <label>Retirement_New</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Already Retired</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Plan__c</fullName>
        <label>Retirement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Timeframe__c</fullName>
        <label>Retirement Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement__c</fullName>
        <label>Retirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Plan__c</fullName>
        <label>Travel Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Timeframe__c</fullName>
        <label>Travel Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <label>Travel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Interest</valueSetName>
        </valueSet>
    </fields>
    <label>Member Connect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LECP_Last_Updated_On__c</columns>
        <columns>Housing_Last_Updated_On__c</columns>
        <columns>LEEM_Last_Updated_On__c</columns>
        <columns>LEMQ_Last_Updated_On__c</columns>
        <columns>LEOL_Last_Updated_On__c</columns>
        <columns>LESF_Last_Updated_On__c</columns>
        <columns>LESB_Last_Updated_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NA{000000000}</displayFormat>
        <label>Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Connect</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>